# electricity-consumption

./: .env-template  .gitignore  LICENSE  Makefile  README.md  create_database.py  credentials.py  data_visualization.py  diego_holaluz_api.py  docker-compose-prod.yml  docker-compose.yml  holaluz_api.py  pyproject.toml  test_for_create_db.py  test_for_data_visualization.py  test_for_holaluz.py  test_for_update_db.py  update_database.py
electricity-consumption/tests/: test_integration_update_database.py
electricity_consumption/: create_database.py  holaluz_api.py  init_database.py  update_database.py
electricity_consumption/tests/: test_for_create_db.py  test_for_data_visualization.py  test_for_holaluz.py  test_for_init_db.py  test_for_update_db.py  test_integration_update_database.py
grafana/: Dockerfile
grafana/provisioning/dashboards/: Electricity_Consumption_GrafanaDashboard_notexp.json
grafana/provisioning/datasources/: all_datasources.yaml
src/electricity_consumption/: api_interactions.py  endesa_api.py  hl_api_interactions.py  holaluz_api.py  init_database.py  update_database.py
tests/: __init__.py  test_for_api_interactions.py  test_for_create_db.py  test_for_data_visualization.py  test_for_endesa.py  test_for_hl_api_interactions.py  test_for_holaluz.py  test_for_init_db.py  test_for_update_db.py  test_integration_update_database.py
tests/resources/: en_consumption.json  hl_consumption.json
